--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,16 +59,20 @@ jobs:
           docker tag $ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-      # 8. Update ECS Task Definition with the new image
-      - name: Update ECS Task Definition with new image
+      # 8. Prepare ecs-task-def.json with secrets
+      - name: Prepare ecs-task-def.json with secrets
         run: |
-          sed -i "s|<IMAGE>|${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }}|g" ecs-task-def.json
+          cp ecs-task-def.json ecs-task-def-temp.json
+          sed -i "s|<IMAGE>|${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }}|g" ecs-task-def-temp.json
+          sed -i 's|"valueFrom": "DISCORD_TOKEN"|"valueFrom": "'${{ secrets.DISCORD_TOKEN }}'"|g' ecs-task-def-temp.json
+          sed -i 's|"valueFrom": "OPENAI"|"valueFrom": "'${{ secrets.OPENAI }}'"|g' ecs-task-def-temp.json
+          sed -i 's|"valueFrom": "MONGOPASS"|"valueFrom": "'${{ secrets.MONGOPASS }}'"|g' ecs-task-def-temp.json
 
       # 9. Register and deploy ECS Task Definition
       - name: Register and deploy ECS Task Definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v2
         with:
-          task-definition: ecs-task-def.json  # Path to your task definition file
+          task-definition: ecs-task-def-temp.json  # Use the temporary file
           service: ${{ secrets.SERVICE }}
           cluster: ${{ secrets.CLUSTER }}
           wait-for-service-stability: true
