--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,16 +59,28 @@ jobs:
           docker tag $ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-      # 8. Prepare ecs-task-def.json with secrets
+      # 8. Install jq
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq
+
+      # 9. Prepare ecs-task-def.json with secrets using jq
       - name: Prepare ecs-task-def.json with secrets
         run: |
           cp ecs-task-def.json ecs-task-def-temp.json
-          sed -i "s|<IMAGE>|${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }}|g" ecs-task-def-temp.json
-          sed -i 's|"valueFrom": "DISCORD_TOKEN"|"valueFrom": "'${{ secrets.DISCORD_TOKEN }}'"|g' ecs-task-def-temp.json
-          sed -i 's|"valueFrom": "OPENAI"|"valueFrom": "'${{ secrets.OPENAI }}'"|g' ecs-task-def-temp.json
-          sed -i 's|"valueFrom": "MONGOPASS"|"valueFrom": "'${{ secrets.MONGOPASS }}'"|g' ecs-task-def-temp.json
+          IMAGE_URI="${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }}"
+          jq --arg image "$IMAGE_URI" \
+             --arg disc_token "${{ secrets.DISCORD_TOKEN }}" \
+             --arg openai_token "${{ secrets.OPENAI }}" \
+             --arg mongo_pass "${{ secrets.MONGOPASS }}" \
+             '
+             .containerDefinitions[0].image = $image |
+             (.containerDefinitions[0].secrets[] | select(.name == "DISCORD_TOKEN").valueFrom) = $disc_token |
+             (.containerDefinitions[0].secrets[] | select(.name == "OPENAI").valueFrom) = $openai_token |
+             (.containerDefinitions[0].secrets[] | select(.name == "MONGOPASS").valueFrom) = $mongo_pass
+             ' ecs-task-def-temp.json > ecs-task-def-updated.json
+          mv ecs-task-def-updated.json ecs-task-def-temp.json
 
-      # 9. Register and deploy ECS Task Definition
+      # 10. Register and deploy ECS Task Definition
       - name: Register and deploy ECS Task Definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v2
         with:
